--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "devDependencies": {
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
-    "typescript": "^5.6.2",
+    "@vitejs/plugin-react": "^4.3.2",
+    "typescript": "^5.3.3",
     "vite": "^5.2.0",
     "tailwindcss": "^4.1.12",
     "postcss": "^8.4.24",
